# mlfromzero

./: .gitignore  Makefile  README.md  pyproject.toml
mlfromzero/: linear_regression.py  models.py
tests/: test_linear_regression.py  test_matrices.py  test_vectors.py
