[tool.poetry]
name = "mlfromzero"
version = "0.1.0"
description = ""
authors = ["muad <muad@causalens.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
numpy = "^2.3.1"
scikit-learn = "^1.7.0"
ruff = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
